--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "mongoose": "^6.6.0",
     "morgan": "^1.10.0",
-    "next": "12.3.0",
+    "next": "^12.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "semantic-ui-css": "^2.4.1",
