--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "next": "^12.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-player": "^2.10.1",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.1.3"
   },
